[gd_scene format=3 uid="uid://w75svscn0c1o"]

[ext_resource type="Script" uid="uid://krjqvhtdiv6b" path="res://addons/sv_mod_loader/interface/settings_window/settings_window.gd" id="1_2wqa5"]

[node name="SettingsWindow" type="Window" unique_id=920225707]
auto_translate_mode = 1
oversampling_override = 1.0
title = "Mod Loader Settings"
initial_position = 2
size = Vector2i(338, 166)
wrap_controls = true
transient = true
exclusive = true
popup_window = true
script = ExtResource("1_2wqa5")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1318526535]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=18150198]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=44137959]
layout_mode = 2
size_flags_horizontal = 4

[node name="IgnoreUntrustedWarningCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1249151748]
layout_mode = 2
size_flags_horizontal = 0
text = "Ignore untrusted mods warning"

[node name="ReferenceRect" type="ReferenceRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1611580813]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 0

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1825685670]
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/IgnoreUntrustedWarningCheckBox" to="." method="_on_ignore_untrusted_warning_check_box_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
